...
                  Align(
                    alignment: Alignment.centerRight,
                    child: TextButton(
                      onPressed: () => Navigator.of(
                        context,
                      ).pushNamed(ForgotPasswordScreen.routeName),
                      child: const Text('Forgot password?'),
                    ),
                  ),
                  const SizedBox(height: 16),
                  BlocBuilder<AuthBloc, AuthState>(
                    builder: (context, state) {
                      return PrimaryButton(
...
                    children: [
                      const Text("Don't have an account?"),
                      TextButton(
                        onPressed: () => Navigator.of(
                          context,
                        ).pushNamed(RegisterScreen.routeName),
                        child: const Text('Register'),
                      ),
                    ],
                  ),
                  Visibility(
                    visible: false,
                    child: AppStatusCard(title: 'Dummy'),
...
